--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,8 @@
 version: '3.2'
 services:
-    getyourbook-ui:
-      container_name: getyourbook-ui
-      image: cr.yandex/crpc5h85i43ube5u6doi/getyourbook-ui:latest
-      ports:
-        - "80:80"
-      restart: always
+  gyb_ui:
+    container_name: gyb_ui
+    image: cr.yandex/crpc5h85i43ube5u6doi/gyb_ui:latest
+    ports:
+      - "80:80"
+    restart: always
