fix ref to image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,8 +14,8 @@ docker-build:
     - "docker login --username $REGISTRY_USER --password $REGISTRY_PASSWORD $REGISTRY_URL"
   stage: build-image
   script:
-    - "docker build -t $REGISTRY_URL/$REGISTRY_ID/gyb_ui:latest ."
-    - "docker push $REGISTRY_URL/$REGISTRY_ID/gyb_ui:latest"
+    - "docker build -t $REGISTRY_URL/$REGISTRY_ID/gyb_ui:$CI_COMMIT_SHA ."
+    - "docker push $REGISTRY_URL/$REGISTRY_ID/gyb_ui:$CI_COMMIT_SHA"
 
 deploy-to-stage:
   stage: deploy
